--- a/archive.html
+++ b/archive.html
@@ -1,23 +1,24 @@
 ---
 layout: page
-title: Our Work
-permalink: /work/
+title: Past Conferences
+permalink: /archive/
 ---
 
-    <!-- Slider Start -->
+  <!-- Slider Start -->
 <section id="global-header">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Just some of our latest projects.</h1>
-                    <p>Don’t just take our word for it. Check out some of our latest work.</p>
+                    <h1>Past Conferences</h1>
+                    <p>Re-watch the action from our previous conferences ...</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-    <!-- Portfolio Start -->
+
+<!-- Portfolio Start -->
 <section id="portfolio-work">
     <div class="container">
         <div class="row">
@@ -25,17 +26,14 @@ permalink: /work/
             <div class="block">
               <div class="portfolio-menu">
                 <ul>
-                    <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter=".2017">2017</li>
+                    <li class="filter" data-filter=".2016">2016</li>
+                    <li class="filter" data-filter=".2015">2015</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
+                    <li class="mix 2017">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -47,7 +45,7 @@ permalink: /work/
                         </div>
                       </a>
                   </li>
-                  <li class="mix Websites">
+                  <li class="mix 2017">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
@@ -59,7 +57,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix 2017">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
@@ -72,7 +70,7 @@ permalink: /work/
 
                     </a>
                   </li>
-                  <li class="mix design">
+                  <li class="mix 2016">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
@@ -84,7 +82,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Video">
+                  <li class="mix 2016">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
@@ -96,7 +94,7 @@ permalink: /work/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix 2015">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
@@ -116,13 +114,19 @@ permalink: /work/
     </div>
 </section>
 
-<!-- Clients Logo Section Start -->
+<div class="container">
+  <div class="col-md-12">
+    <center><h3>Past Sponsors</h3></center>
+  </div>
+</div>
+
+<!-- Previous sponsors list -->
 <section id="clients-logo-section">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <div id="clients-logo" class="owl-carousel">
+          <div id="clients-logo1" class="owl-carousel">
             <div class="clients-logo-img">
               <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
             </div>
@@ -162,22 +166,50 @@ permalink: /work/
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
 
-
-<!-- Call to action Start -->
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <div id="clients-logo2" class="owl-carousel">
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
+            </div>
+            <div class="clients-logo-img">
+              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
+            </div>
+          </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </section>
