--- a/contact.html
+++ b/contact.html
@@ -10,80 +10,52 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h1>Drop Us A Note</h1>
-          <p>Don’t just take our word for it. Check out some of our latest work.</p>
+          <h1>Contact Us</h1>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 <!-- contact form start -->
 <section id="contact-form">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <form>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Email Address">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Subject">
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <form>
-            <div class="form-group-2">
-              <textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
-            </div>
-            <button class="btn btn-default" type="submit">Send Message</button>
-          </form>
-        </div>
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <center>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-tV-Oz7OtgyTnKHqmCPSnuM75Q7_V7GyIILxPYxa9kgF9Yg/viewform?embedded=true" width="100%" height="790" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </center>
       </div>
     </div>
+
+    <!-- Address & Map -->
     <div id="contact-box" class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
           <h2>Stop By For A visit</h2>
           <ul class="address-block">
             <li>
-              <i class="fa fa-map-marker"></i>North Main Street,Brooklyn Australia
+              <i class="fa fa-map-marker"></i>
+              <p>
+                1st Floor, Flat No. 147, 10th Cross, 1st Stage,
+                Indiranagar, Bengaluru (Bangalore) Urban, Karnataka,
+                560038
+              </p>
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: contact@mail.com
-            </li>
-            <li>
-              <i class="fa fa-phone"></i>Phone:+88 01672 506 744
+              <i class="fa fa-phone"></i>Phone:+91 8087766880
             </li>
           </ul>
 
           <ul class="social-icons">
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-google"></i></a>
+              <a href="https://twitter.com/ett_india" target="_blank"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.facebook.com/ett2015/" target="_blank"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-pinterest"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-dribbble"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-behance"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-facebook"></i></a>
+              <a href="mailto:satish@emergingtechs.in" target="_blank"><i class="fa fa-envelope-o"></i></a>
             </li>
           </ul>
         </div>
@@ -92,22 +64,8 @@ permalink: /contact/
         <div class="block">
           <h2>We Also Count In Google Map</h2>
             <div class="google-map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.472979439986!2d-73.97769068489596!3d40.7516207793276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2590247c56379%3A0x15e13bea38b43e18!2sChrysler+Building!5e0!3m2!1sen!2sus!4v1477406538220" width="555" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1634.650049872498!2d77.6386163517538!3d12.979849762084598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16a4fb17c35d%3A0x78b75fbfd7141c40!2s10th+Cross+Rd%2C+Indira+Nagar+1st+Stage%2C+H+Colony%2C+Indiranagar%2C+Bengaluru%2C+Karnataka+560038!5e0!3m2!1sen!2sin!4v1540473522613" width="555" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Call to action Start -->
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
         </div>
       </div>
     </div>
