Updated to airspace theme first cut

--- a/archive.html
+++ b/archive.html
@@ -19,197 +19,199 @@ permalink: /archive/
 </section>
 
 <!-- Portfolio Start -->
-<section id="portfolio-work">
-    <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="block">
-              <div class="portfolio-menu">
-                <ul>
-                    <li class="filter" data-filter=".2017">2017</li>
-                    <li class="filter" data-filter=".2016">2016</li>
-                    <li class="filter" data-filter=".2015">2015</li>
-                </ul>
-              </div>
-              <div class="portfolio-contant">
-                <ul id="portfolio-contant-active">
-                    <li class="mix 2017">
-                      <a href="#">
-                        <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
-                        <div class="overly">
-                          <div class="position-center">
-                            <h2>Tesla Motors</h2>
-                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
+<!--<section id="portfolio-work">-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+          <!--<div class="col-md-12">-->
+            <!--<div class="block">-->
+              <!--<div class="portfolio-menu">-->
+                <!--<ul>-->
+                  <!--<li class="filter active" data-filter="all">ALL</li>-->
+                    <!--<li class="filter" data-filter=".2017">2017</li>-->
+                    <!--<li class="filter" data-filter=".2016">2016</li>-->
+                    <!--<li class="filter" data-filter=".2015">2015</li>-->
+                <!--</ul>-->
+              <!--</div>-->
+              <!--<div class="portfolio-contant">-->
+                <!--<ul id="portfolio-contant-active">-->
+                    <!--<li class="mix 2017">-->
+                      <!--<a href="#">-->
+                        <!--<img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">-->
+                        <!--<div class="overly">-->
+                          <!--<div class="position-center">-->
+                            <!--<h2>Tesla Motors</h2>-->
+                            <!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
 
-                          </div>
-                        </div>
-                      </a>
-                  </li>
-                  <li class="mix 2017">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <!--</div>-->
+                        <!--</div>-->
+                      <!--</a>-->
+                  <!--</li>-->
+                  <!--<li class="mix 2017">-->
+                    <!--<a href="#">-->
+                      <!--<img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">-->
+                      <!--<div class="overly">-->
+                        <!--<div class="position-center">-->
+                          <!--<h2>Tesla Motors</h2>-->
+                          <!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
 
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix 2017">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                        <!--</div>-->
+                      <!--</div>-->
+                    <!--</a>-->
+                  <!--</li>-->
+                  <!--<li class="mix 2017">-->
+                    <!--<a href="#">-->
+                      <!--<img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">-->
+                      <!--<div class="overly">-->
+                        <!--<div class="position-center">-->
+                          <!--<h2>Tesla Motors</h2>-->
+                          <!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
 
-                        </div>
-                      </div>
+                        <!--</div>-->
+                      <!--</div>-->
 
-                    </a>
-                  </li>
-                  <li class="mix 2016">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                    <!--</a>-->
+                  <!--</li>-->
+                  <!--<li class="mix 2016">-->
+                    <!--<a href="#">-->
+                      <!--<img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">-->
+                      <!--<div class="overly">-->
+                        <!--<div class="position-center">-->
+                          <!--<h2>Tesla Motors</h2>-->
+                          <!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
 
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix 2016">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                        <!--</div>-->
+                      <!--</div>-->
+                    <!--</a>-->
+                  <!--</li>-->
+                  <!--<li class="mix 2016">-->
+                    <!--<a href="#">-->
+                      <!--<img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">-->
+                      <!--<div class="overly">-->
+                        <!--<div class="position-center">-->
+                          <!--<h2>Tesla Motors</h2>-->
+                          <!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
 
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix 2015">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                        <!--</div>-->
+                      <!--</div>-->
+                    <!--</a>-->
+                  <!--</li>-->
+                  <!--<li class="mix 2015">-->
+                    <!--<a href="#">-->
+                      <!--<img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">-->
+                      <!--<div class="overly">-->
+                        <!--<div class="position-center">-->
+                          <!--<h2>Tesla Motors</h2>-->
+                          <!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
 
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
-</section>
+                        <!--</div>-->
+                      <!--</div>-->
+                    <!--</a>-->
+                  <!--</li>-->
+                <!--</ul>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
 
-<div class="container">
-  <div class="col-md-12">
-    <center><h3>Past Sponsors</h3></center>
-  </div>
-</div>
+<center><h1>Coming Soon ...</h1></center>
+<!--<div class="container">-->
+  <!--<div class="col-md-12">-->
+    <!--<center><h3>Past Sponsors</h3></center>-->
+  <!--</div>-->
+<!--</div>-->
 
 <!-- Previous sponsors list -->
-<section id="clients-logo-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <div id="clients-logo1" class="owl-carousel">
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-          </div>
-        </div>
-      </div>
+<!--<section id="clients-logo-section">-->
+  <!--<div class="container">-->
+    <!--<div class="row">-->
+      <!--<div class="col-md-12">-->
+        <!--<div class="block">-->
+          <!--<div id="clients-logo1" class="owl-carousel">-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
 
-      <div class="col-md-12">
-        <div class="block">
-          <div id="clients-logo2" class="owl-carousel">
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </div>
-</section>
+      <!--<div class="col-md-12">-->
+        <!--<div class="block">-->
+          <!--<div id="clients-logo2" class="owl-carousel">-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">-->
+            <!--</div>-->
+            <!--<div class="clients-logo-img">-->
+              <!--<img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</section>-->
