--- a/index.html
+++ b/index.html
@@ -8,10 +8,33 @@ permalink: /
 <section id="slider">
   <div class="container">
     <div class="row">
-      <div class="col-md-10 col-md-offset-2">
+      <div class="col-sm-12">
         <div class="block">
           <h1 class="animated fadeInUp">Emerging Technology Trust (ETT)</h1>
-          <p class="animated fadeInUp">A non-profit organisation which focuses on creating opportunities & conducting events to promote Open Source contributions in India.</p>
+          <p class="animated fadeInUp">
+            A non-profit organisation which focuses on creating opportunities & conducting events to promote Open Source contributions in India.
+            <span class="underline-bottom"></span>
+          </p>
+          <center>
+            <p class="animated fadeInUp next-event-caption">
+              Next.Events (Oct - March):
+            </p>
+            <ul class="animated fadeInUp next-event-list">
+              <li><a href="https://devopsdaysindia.org" target="_blank" title="DevOps Days India 2018">DevOps Days India 2018<br><span class="date">8,9 Dec 18</span></a></li>
+              <li>
+                <a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Golang Girls Pune 2018">Golang Girls Pune 2018<br>
+                  <span class="date">25 Nov 18</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.townscript.com/e/go-girls-bengaluru" target="_blank" title="Golang Girls Bengaluru 2018">Golang Girls Bengaluru 2018<br>
+                  <span class="date">2 Dec 18</span>
+                </a>
+              </li>
+              <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India 2019">Gophercon India 2019<br><span class="date">18, 19 Jan 19</span></a></li>
+              <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India 2019">RubyConf India 2019<br><span class="date">20, 21 Jan 19</span></a></li>
+            </ul>
+          </center>
         </div>
       </div>
     </div>
@@ -19,49 +42,25 @@ permalink: /
 </section>
 
 <!-- Wrapper Start -->
-<section id="intro">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7 col-sm-12">
-        <div class="block">
-          <div class="section-title">
-            <h1>About Us</h1>
-            <h2>Mission</h2>
-            <h3>Tech Conferences, reinvented.</h3>
-            <p>
-              We want to bring an unheard-of, TED-like level of quality to tech conferences.
-              <br><br>
-              Ever been to an average conference with 6 parallel sessions and unprepared speakers? Did you spend the day (or the week!) on your laptop doing something else?
-              If so, you understand the need for a reboot.
-              <br><br>
-              We will bring you the best speakers in their fields. Invite them on the best stages Paris has to offer. Make you enjoy tech conferences like you never did!
-              Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-            </p>
-          </div>
+<center>
+  <section id="intro">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h1>About</h1>
+          <span class="underline-bottom"></span>
+          <p><strong>ETT</strong> is a non-profit organization behind the series of high-caliber developer events in India.</p>
+          <p>We started in April 2010 by helping in organizing the first-ever RubyConfIndia conference in Bengaluru</p>
+          <p>On August 2016, we organized our first conference, Deccan RubyConf 2016.</p>
+          <p>Now we organizes around ten difference conferences and workshop throughout the calender year.</p>
+          <!--<p class="discover-more">-->
+            <!--<a href="/about" class="button" title="More about ETT">Discover more</a>-->
+          <!--</p>-->
         </div>
-      </div><!-- .col-md-7 close -->
-      <div class="col-md-5 col-sm-12">
-        <div class="block">
-          <img src="img/wrapper-img.png" alt="Img">
-        </div>
-      </div><!-- .col-md-5 close -->
+      </div>
     </div>
-  </div>
-</section>
-
-<!--<section id="feature">-->
-<!--<div class="container">-->
-  <!--<div class="row">-->
-    <!--<div class="col-md-6 col-md-offset-6">-->
-      <!--<h2>WE BELIEVE IN GREAT IDEAS</h2>-->
-      <!--<p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>-->
-      <!--<p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>-->
-      <!--<p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>-->
-      <!--<a href="#" class="btn btn-view-works">View Works</a>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
-<!--</section>-->
+  </section>
+</center>
 
 <!-- Service Start -->
 <section id="service">
@@ -69,88 +68,27 @@ permalink: /
     <div class="row">
       <div class="section-title">
         <h1>Our Services</h1>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+        <span class="underline-bottom"></span>
+        <p>All the services are community based ...</p>
       </div>
     </div>
     <div class="row ">
       <div class="col-sm-6 col-md-6">
         <div class="service-item">
-          <i class="icon ion-coffee"></i>
+          <span class="fa-stack fa-4x">
+              <i class="fa fa-users fa-stack-2x fa-inverse"></i>
+          </span>
           <h4>Organizing Conference</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-6">
         <div class="service-item">
-          <i class="ion-compass"></i>
+          <span class="fa-stack fa-4x">
+              <i class="fa fa-laptop fa-stack-2x fa-inverse"></i>
+          </span>
           <h4>Conducting Workshop</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<!--&lt;!&ndash; Call to action Start &ndash;&gt;-->
-<!--<section id="call-to-action">-->
-  <!--<div class="container">-->
-    <!--<div class="row">-->
-      <!--<div class="col-md-12">-->
-        <!--<div class="block">-->
-          <!--<h2>We design delightful digital experiences.</h2>-->
-          <!--<p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>-->
-          <!--<a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</section>-->
-
-<!--&lt;!&ndash; Content Start &ndash;&gt;-->
-<!--<section id="testimonial">-->
-  <!--<div class="container">-->
-    <!--<div class="row">-->
-      <!--<div class="section-title text-center">-->
-        <!--<h2>Fun Facts About Us</h2>-->
-        <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row">-->
-      <!--<div class="col-md-6">-->
-        <!--{% if site.data.funfacts.size > 0 %}-->
-        <!--<div class="block">-->
-          <!--{% for ff in site.data.funfacts %}-->
-          <!--<ul class="counter-box clearfix">-->
-            <!--<li>-->
-              <!--<div class="block">-->
-                <!--<i class="{{ ff.icon }}"></i>-->
-                <!--<h4 class="counter">{{ ff.counter }}</h4>-->
-                <!--<span>{{ ff.text }}</span>-->
-              <!--</div>-->
-            <!--</li>-->
-            <!--{% endfor %}-->
-          <!--</ul>-->
-        <!--</div>-->
-        <!--{% endif %}-->
-      <!--</div>-->
-      <!--<div class="col-md-6">-->
-        <!--{% if site.data.testimonials.size > 0 %}-->
-        <!--<div class="testimonial-carousel">-->
-          <!--<div id="testimonial-slider" class="owl-carousel">-->
-            <!--{% for tm in site.data.testimonials %}-->
-            <!--<div>-->
-                <!--<img src="img/cotation.png" alt="IMG">-->
-                <!--<p>{{ tm.testimonial }}</p>-->
-                <!--<div class="user">-->
-                  <!--<img src="{{ tm.image }}" alt="Pepole">-->
-                  <!--<p><span>{{ tm.name }}</span> {{ tm.title }}</p>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--{% endfor %}-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--{% endif %}-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</section>-->
