--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@ permalink: /contact/
       <div class="col-md-12">
         <div class="block">
           <h1>Contact Us</h1>
+          <p>For any query, comment or suggestion</p>
         </div>
       </div>
     </div>
@@ -63,9 +64,9 @@ permalink: /contact/
       <div class="col-md-6 col-sm-12">
         <div class="block">
           <h2>We Also Count In Google Map</h2>
-            <div class="google-map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1634.650049872498!2d77.6386163517538!3d12.979849762084598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16a4fb17c35d%3A0x78b75fbfd7141c40!2s10th+Cross+Rd%2C+Indira+Nagar+1st+Stage%2C+H+Colony%2C+Indiranagar%2C+Bengaluru%2C+Karnataka+560038!5e0!3m2!1sen!2sin!4v1540473522613" width="555" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
+          <div class="google-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1634.650049872498!2d77.6386163517538!3d12.979849762084598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16a4fb17c35d%3A0x78b75fbfd7141c40!2s10th+Cross+Rd%2C+Indira+Nagar+1st+Stage%2C+H+Colony%2C+Indiranagar%2C+Bengaluru%2C+Karnataka+560038!5e0!3m2!1sen!2sin!4v1540473522613" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
     </div>
