--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@ permalink: /
     <div class="row">
       <div class="col-sm-12">
         <div class="block">
-          <h1 class="animated fadeInUp">Emerging Technology Trust (ETT)</h1>
-          <p class="animated fadeInUp">
-            A non-profit organisation which focuses on creating opportunities & conducting events to promote Open Source contributions in India.
-            <span class="underline-bottom"></span>
-          </p>
           <center>
+            <h1 class="animated fadeInUp">Emerging Technology Trust (ETT)</h1>
+            <p class="animated fadeInUp">
+              A non-profit organisation which focuses on creating opportunities & conducting events to promote Open Source contributions in India.
+              <span class="underline-bottom"></span>
+            </p>
+
             <p class="animated fadeInUp next-event-caption">
               Next.Events (Oct - March):
             </p>
             <ul class="animated fadeInUp next-event-list">
-              <li><a href="https://devopsdaysindia.org" target="_blank" title="DevOps Days India 2018">DevOps Days India 2018<br><span class="date">8,9 Dec 18</span></a></li>
+              <li><a href="https://devopsdaysindia.org" target="_blank" title="DevOps Days India 2018">DevOps Days<br><span class="date">8,9 Dec 18</span></a></li>
               <li>
-                <a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Golang Girls Pune 2018">Golang Girls Pune 2018<br>
+                <a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Golang Girls Pune 2018">Go Girls Pune<br>
                   <span class="date">25 Nov 18</span>
                 </a>
               </li>
               <li>
-                <a href="https://www.townscript.com/e/go-girls-bengaluru" target="_blank" title="Golang Girls Bengaluru 2018">Golang Girls Bengaluru 2018<br>
+                <a href="https://www.townscript.com/e/go-girls-bengaluru" target="_blank" title="Golang Girls Bengaluru 2018">Go Girls Bengaluru<br>
                   <span class="date">2 Dec 18</span>
                 </a>
               </li>
-              <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India 2019">Gophercon India 2019<br><span class="date">18, 19 Jan 19</span></a></li>
-              <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India 2019">RubyConf India 2019<br><span class="date">20, 21 Jan 19</span></a></li>
+              <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India 2019">Gophercon<br><span class="date">18, 19 Jan 19</span></a></li>
+              <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India 2019">RubyConf<br><span class="date">20, 21 Jan 19</span></a></li>
             </ul>
           </center>
         </div>
