Added Satish, Sidu & Gautam names as trustee

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ permalink: /about
                                         <span class="pname">Satish Talim</span>
                                     </div>
                                     <div class="col-xs-12">
-                                        <span class="pfunction">Partners</span>
+                                        <span class="pfunction">Trustee</span>
                                     </div>
                                     <div class="col-xs-12">
                                         <center>
@@ -78,7 +78,48 @@ permalink: /about
                             <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <center>
                                     <div class="col-xs-12">
-                                        <img src="{{ site.url }}/img/team/2.jpg" alt="Satish Talim">
+                                        <img src="{{ site.url }}/img/team/2.jpg" alt="Sidu Ponnappa">
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <span class="pname">Sidu Ponnappa</span>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <span class="pfunction">Trustee</span>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <center>
+                                            <a href="https://twitter.com/ponnappa/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/ponnappa/">
+                                                <i class="fa fa-fw fa-2x fa-twitter-square valign-middle"></i>
+                                            </a>
+                                        </center>
+                                    </div>
+                                </center>
+                            </div>
+                            <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                                <center>
+                                    <div class="col-xs-12">
+                                        <img src="{{ site.url }}/img/team/3.jpg" alt="Gautam Rege">
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <span class="pname">Gautam Rege</span>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <span class="pfunction">Trustee</span>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <center>
+                                            <a href="https://twitter.com/gautamrege/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/gautamrege/">
+                                                <i class="fa fa-fw fa-2x fa-twitter-square valign-middle"></i>
+                                            </a>
+                                        </center>
+                                    </div>
+                                </center>
+                            </div>
+                            <!--Logistics -->
+                            <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                                <center>
+                                    <div class="col-xs-12">
+                                        <img src="{{ site.url }}/img/team/4.jpg" alt="Santosh M">
                                     </div>
                                     <div class="col-xs-12">
                                         <span class="pname">Santosh M</span>
@@ -88,12 +129,9 @@ permalink: /about
                                     </div>
                                     <div class="col-xs-12">
                                         <center>
-                                            <a href="https://twitter.com/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/">
+                                            <a href="https://twitter.com/verysantosh" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/">
                                                 <i class="fa fa-fw fa-2x fa-twitter-square valign-middle"></i>
                                             </a>
-                                            <!--<a href="http://satishtalim.com/" target="_blank" class="col dark-gray width-120" alt="http://satishtalim.com">-->
-                                                <!--<i class="fa fa-fw fa-2x fa fa-external-link valign-middle"></i>-->
-                                            <!--</a>-->
                                         </center>
                                     </div>
                                 </center>
@@ -101,7 +139,7 @@ permalink: /about
                             <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <center>
                                     <div class="col-xs-12">
-                                        <img src="{{ site.url }}/img/team/3.jpg" alt="Satish Talim">
+                                        <img src="{{ site.url }}/img/team/5.jpg" alt="Pritam Pandit">
                                     </div>
                                     <div class="col-xs-12">
                                         <span class="pname">Pritam Pandit</span>
@@ -111,12 +149,9 @@ permalink: /about
                                     </div>
                                     <div class="col-xs-12">
                                         <center>
-                                            <a href="https://twitter.com/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/">
-                                                <i class="fa fa-fw fa-2x fa-twitter-square valign-middle"></i>
+                                            <a href="mailto:pritam@emergingtechs.in" target="_blank" class="col dark-gray width-120">
+                                                <i class="fa fa-fw fa-2x fa fa-envelope-square valign-middle"></i>
                                             </a>
-                                            <!--<a href="#" target="_blank" class="col dark-gray width-120" alt="#>-->
-                                                <!--<i class="fa fa-fw fa-2x fa fa-external-link valign-middle"></i>-->
-                                            <!--</a>-->
                                         </center>
                                     </div>
                                 </center>
@@ -124,7 +159,7 @@ permalink: /about
                             <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <center>
                                     <div class="col-xs-12">
-                                        <img src="{{ site.url }}/img/team/4.jpg" alt="Budh Ram">
+                                        <img src="{{ site.url }}/img/team/6.jpg" alt="Budh Ram">
                                     </div>
                                     <div class="col-xs-12">
                                         <span class="pname">Budh Ram</span>
