--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ permalink: /
               Next.Events (Oct - March):
             </p>
             <ul class="animated fadeInUp next-event-list">
-              <li><a href="https://devopsdaysindia.org" target="_blank" title="DevOps Days India 2018">DevOps Days<br><span class="date">8,9 Dec 18</span></a></li>
               <li>
                 <a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Golang Girls Pune 2018">Go Girls Pune<br>
                   <span class="date">25 Nov 18</span>
@@ -32,6 +31,7 @@ permalink: /
                   <span class="date">2 Dec 18</span>
                 </a>
               </li>
+              <li><a href="https://devopsdaysindia.org" target="_blank" title="DevOps Days India 2018">DevOps Days<br><span class="date">8,9 Dec 18</span></a></li>
               <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India 2019">Gophercon<br><span class="date">18, 19 Jan 19</span></a></li>
               <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India 2019">RubyConf<br><span class="date">20, 21 Jan 19</span></a></li>
             </ul>
@@ -52,8 +52,8 @@ permalink: /
           <span class="underline-bottom"></span>
           <p><strong>ETT</strong> is a non-profit organization behind the series of high-caliber developer events in India.</p>
           <p>We started in April 2010 by helping in organizing the first-ever RubyConfIndia conference in Bengaluru</p>
-          <p>On August 2016, we organized our first conference, Deccan RubyConf 2016.</p>
-          <p>Now we organizes around ten difference conferences and workshop throughout the calender year.</p>
+          <p>On August 2015, ETT organized its first conference, Deccan RubyConf 2015.</p>
+          <p>Now we organizes around ten difference conferences and workshops throughout the calender year.</p>
           <!--<p class="discover-more">-->
             <!--<a href="/about" class="button" title="More about ETT">Discover more</a>-->
           <!--</p>-->
