--- a/about.html
+++ b/about.html
@@ -190,8 +190,8 @@ permalink: /about
                         <h3>Conferences</h3>
                         <p>Our upcoming conferences are:</p>
                         <ul>
-                            <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India"><strong>DevOpsDays India</strong></a>: Dec 8,9 2018 - 4th edition</li>
-                            <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India"><strong>Gophercon India</strong></a>: January 18,19 2019 - 4th edition</li>
+                            <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India"><strong>DevOpsDays India</strong></a>: Dec 8,9 2018 - 7th edition</li>
+                            <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India"><strong>Gophercon India</strong></a>: January 18,19 2019 - 5th edition</li>
                             <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India"><strong>RubyConf India</strong></a>: Jan 20,21 2019 - 10th edition</li>
                             <li><a href="https://www.droidjam.in" target="_blank" title="DroidJam India"><strong>DroidJam India</strong></a>: TBA (Expect in July)</li>
                             <li><a href="https://www.deccanrubyconf.org/" target="_blank" title="Deccan RubyConf India"><strong>Deccan RubyConf India</strong></a>: TBA (Expect in August)</li>
@@ -201,9 +201,9 @@ permalink: /about
                         <h3>Workshops</h3>
                         <p>Our upcoming workshops are:</p>
                         <ul>
-                            <li><a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Go Girls Pune"><strong>Go Girls Pune</strong></a>: Nov 25, 2018 - 1th edition</li>
+                            <li><a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Go Girls Pune"><strong>Go Girls Pune</strong></a>: Nov 25, 2018 - 1st edition</li>
                             <li><a href="https://www.townscript.com/e/go-girls-bengaluru" target="_blank" title="Go Girls Bengaluru"><strong>Go Girls Bengaluru</strong></a>: Dec 2, 2018 - 1st edition</li>
-                            <li><a href="http://railsgirls.com/pune.html" target="_blank" title="Go Girls Pune"><strong>Rails Girls Pune</strong></a>: TBA </li>
+                            <li><a href="http://railsgirls.com/pune.html" target="_blank" title="Go Girls Pune"><strong>Rails Girls Pune</strong></a>: TBA (Expect in Feb 2019) </li>
                         </ul>
                     </article>
                 </section>
