Updated budhrg to coolbrg

--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@ permalink: /about
                                     </div>
                                     <div class="col-xs-12">
                                         <center>
-                                            <a href="https://twitter.com/budhrg/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/budhrg/">
+                                            <a href="https://twitter.com/coolbrg/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/budhrg/">
                                                 <i class="fa fa-fw fa-2x fa-twitter-square valign-middle"></i>
                                             </a>
                                             <a href="http://budhram.me" target="_blank" class="col dark-gray width-120" alt="http://budhram.me">
