Fix typos from Home Page

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ permalink: /
           <h1>About</h1>
           <span class="underline-bottom"></span>
           <p><strong>ETT</strong> is a non-profit organization behind the series of high-caliber developer events in India.</p>
-          <p>We started in April 2010 by helping in organizing the first-ever RubyConfIndia conference in Bengaluru</p>
+          <p>We started in April 2010 by helping in organizing the first-ever RubyConfIndia conference in Bengaluru.</p>
           <p>On August 2015, we organized our first conference, Deccan RubyConf 2015.</p>
-          <p>Now we organizes around ten difference conferences and workshop throughout the calender year.</p>
+          <p>Now we organizes around ten different conferences and workshops throughout the calender year.</p>
           <p class="discover-more">
             <a href="/about" class="button" title="More about ETT">Discover more</a>
           </p>
