Updated Rails Girls Pune date

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ permalink: /
             <ul class="animated fadeInUp next-event-list">
               <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India 2019">Gophercon<br><span class="date">18, 19 Jan 2019</span></a></li>
               <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India 2019">RubyConf<br><span class="date">20, 21 Jan 2019</span></a></li>
+              <li><a href="http://railsgirls.com/pune.html" target="_blank" title="Rails Girls Pune 2019">Rails Girls Pune<br><span class="date">3 Feb 2019</span></a></li>
             </ul>
           </center>
         </div>
