Added DroidJam, Deccanrubyconf and adjust workshop details

--- a/about.html
+++ b/about.html
@@ -119,26 +119,6 @@ permalink: /about
                             <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <center>
                                     <div class="col-xs-12">
-                                        <img src="{{ site.url }}/img/team/4.jpg" alt="Santosh M">
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <span class="pname">Santosh M</span>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <span class="pfunction">Logistics</span>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <center>
-                                            <a href="https://twitter.com/verysantosh" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/">
-                                                <i class="fa fa-fw fa-2x fa-twitter-square valign-middle"></i>
-                                            </a>
-                                        </center>
-                                    </div>
-                                </center>
-                            </div>
-                            <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                                <center>
-                                    <div class="col-xs-12">
                                         <img src="{{ site.url }}/img/team/5.jpg" alt="Pritam Pandit">
                                     </div>
                                     <div class="col-xs-12">
@@ -169,10 +149,10 @@ permalink: /about
                                     </div>
                                     <div class="col-xs-12">
                                         <center>
-                                            <a href="https://twitter.com/coolbrg/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/budhrg/">
+                                            <a href="https://twitter.com/coolbrg/" target="_blank" class="col dark-gray width-120" alt="https://twitter.com/coolbrg/">
                                                 <i class="fa fa-fw fa-2x fa-twitter-square valign-middle"></i>
                                             </a>
-                                            <a href="http://budhram.me" target="_blank" class="col dark-gray width-120" alt="http://budhram.me">
+                                            <a href="http://coolbrg.me" target="_blank" class="col dark-gray width-120" alt="http://coolbrg.me">
                                                 <i class="fa fa-fw fa-2x fa fa-external-link valign-middle"></i>
                                             </a>
                                         </center>
@@ -190,24 +170,27 @@ permalink: /about
                         <h3>Conferences</h3>
                         <p>Upcoming conferences are:</p>
                         <ul>
-                          <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India"><strong>Gophercon India</strong></a>: January 18,19 2019 - 5th edition</li>
-                          <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India"><strong>RubyConf India</strong></a>: Jan 20,21 2019 - 10th edition</li>
-                          <li><a href="https://www.droidjam.in" target="_blank" title="DroidJam India"><strong>DroidJam India</strong></a>: TBA (Expect in July)</li>
-                          <li><a href="https://www.deccanrubyconf.org/" target="_blank" title="Deccan RubyConf India"><strong>Deccan RubyConf India</strong></a>: TBA (Expect in August)</li>
+                          <li><a href="https://www.deccanrubyconf.org/" target="_blank" title="Deccan RubyConf India"><strong>Deccan RubyConf India</strong></a>: 10 Aug, 2019</li>
+                          <li><a href="https://www.droidjam.in" target="_blank" title="DroidJam India"><strong>DroidJam India</strong></a>: 30, 31 Aug, 2019 - 2nd Edition</li>
+                        <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India"><strong>DevOpsDays India</strong></a>: 13, 14 Sept, 2019 - 8th Edition</li>
                         </ul>
                         <p>Our past conferences are:</p>
                         <ul>
-                          <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India"><strong>DevOpsDays India</strong></a>: Dec 8,9 2018 - 7th edition</li>
+                          <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India"><strong>Gophercon India</strong></a>: January 18,19 2019 - 5th Edition</li>
+                          <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India"><strong>RubyConf India</strong></a>: Jan 20,21 2019 - 10th Edition</li>
+                          <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India"><strong>DevOpsDays India</strong></a>: Dec 8,9 2018 - 7th Edition</li>
                         </ul>
                     </article>
                     <article id="workshops">
                         <h3>Events or Workshops</h3>
                         <p>Our upcoming workshops are:</p>
                         <ul>
-                          <li><a href="http://railsgirls.com/pune.html" target="_blank" title="Rails Girls Pune"><strong>Rails Girls Pune</strong></a>: Feb 3, 2019</li>
+                          <li><strong>Go Girls Pune</strong>: TBA</li>
+                          <li><strong>Go Girls Bangalore</strong>: TBA</li>
                         </ul>
                         <p>Our past workshops are:</p>
                         <ul>
+                          <li><a href="http://railsgirls.com/pune.html" target="_blank" title="Rails Girls Pune"><strong>Rails Girls Pune</strong></a>: Feb 3, 2019</li>
                           <li><a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Go Girls Pune"><strong>Go Girls Pune</strong></a>: Nov 25, 2018 - 1st edition</li>
                           <li><a href="https://www.townscript.com/e/go-girls-bengaluru" target="_blank" title="Go Girls Bengaluru"><strong>Go Girls Bengaluru</strong></a>: Dec 2, 2018 - 1st edition</li>
                         </ul>
