--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ permalink: /
             </p>
 
             <p class="animated fadeInUp next-event-caption">
-              Next.Events (Jan - March):
+              Next.Events
             </p>
             <ul class="animated fadeInUp next-event-list">
-              <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India 2019">Gophercon<br><span class="date">18, 19 Jan 2019</span></a></li>
-              <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India 2019">RubyConf<br><span class="date">20, 21 Jan 2019</span></a></li>
-              <li><a href="http://railsgirls.com/pune.html" target="_blank" title="Rails Girls Pune 2019">Rails Girls Pune<br><span class="date">3 Feb 2019</span></a></li>
+              <li><a href="https://www.deccanrubyconf.org/" target="_blank" title="Deccan RubyConf 2019">Deccan RubyConf<br><span class="date">10 Aug, 2019</span></a></li>
+              <li><a href="https://www.droidjam.in/" target="_blank" title="DroidJam India 2019">DroidJam<br><span class="date">30, 31 Aug 2019</span></a></li>
+              <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India 2019">DevOpsDays India<br><span class="date">13, 14 Sept, 2019</span></a></li>
             </ul>
           </center>
         </div>
